2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* include/dix-config.h.in:
	Merge from HEAD:
	Add #undef BSD44SOCKETS, without which the listener socket on FreeBSD
	would be created without the port number due to xtrans's define not
	being used when xtrans was compiled in the X Server.

2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Merge from HEAD:
	Fix the AC_TRY_RUN for sys/linker.h which had no hope due to lacking a
	main() to instead use a nice AC_CHECK_HEADERS that works.  Also, fix
	the nearby SYSV IPC check which was lacking an argument and giving
	bogus results (it's "AC_TRY_LINK(includes, main, yes, no)").

2006-02-15  Eric Anholt  <anholt@FreeBSD.org>

	* render/picture.c: (premultiply):
	Merge from HEAD:
	Correct rounding in divide-by-255 code.

2006-02-14  Adam Jackson  <ajax@freedesktop.org>

	* include/xorg-config.h.in:
	Make self-backtracing work.  Spotted by many people, patch from Gentoo.

	* os/access.c:
	Bug #5218: Avoid crashing on unconfigured interfaces.  (Andrei Barbu)

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #5359: Fix a segfault (Mark Kettenis)

	* fb/fbpict.c:
	Fix an fb regression on A8 pictures.  (Fredrik Höglund)

2005-12-19  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/doc/man/xorg.conf.man.pre:
	Bug #5116: Refer DRI section details to dri.fd.o.

2005-12-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/doc/devel/exa-driver.txt:
	* hw/xfree86/getconfig/cfg.man.pre:
	* hw/xfree86/getconfig/getconfig.man.pre:
	Fix typos.

2005-12-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/scanpci/pci.ids: 
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	Update to 2005-12-14 snapshot from pciids.sf.net

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac: